# promptcache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  gh-packages.yml  pypi-release.yml  release.yml
examples/: analyze-prompt.ts  anthropic-basic.ts  openai-basic.ts  with-tools.ts
python/: README.md  pyproject.toml
python/cachellm/: __init__.py  types.py
python/cachellm/core/: __init__.py  analyzer.py  differ.py  hasher.py  strategy.py  token_estimator.py
python/cachellm/providers/: __init__.py  anthropic.py  gemini.py  openai.py
python/cachellm/stats/: __init__.py  tracker.py
python/cachellm/utils/: __init__.py  logger.py  lru.py
python/tests/providers/: test_anthropic.py  test_openai.py
python/tests/unit/: test_analyzer.py  test_lru.py  test_strategy.py  test_token_estimator.py
src/: index.ts  types.ts
src/core/: analyzer.ts  differ.ts  hasher.ts  strategy.ts  token-estimator.ts
src/providers/: anthropic.ts  gemini.ts  openai.ts
src/stats/: tracker.ts
src/utils/: logger.ts  lru.ts
tests/providers/: anthropic-stream.test.ts  anthropic.test.ts  gemini.test.ts  openai.test.ts
tests/unit/: analyzer.test.ts  custom-tokenizer.test.ts  lru.test.ts  strategy.test.ts  token-estimator.test.ts
website/: package-lock.json
website/app/: globals.css  layout.tsx  page.tsx
